--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MovieDetailActivity" />
+
+        <provider
+            android:name="com.shentuo.popularmovies.data.MovieListContentProvider"
+            android:authorities="com.shentuo.popularmovies"
+            android:exported="false" />
     </application>
 
 </manifest>
