--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MovieDetailActivity" />
+        <activity
+            android:name=".ui.MovieDetailActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
 
         <provider
             android:name="com.shentuo.popularmovies.data.MovieListContentProvider"
